--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,14 +1,108 @@
-.menu{
-    background-color:#CCC;
-    width:100%;
-    display:flex;
-    justify-content: space-around;
-    background: #000;
+.hover{
+    color: #fff;
 }
 
-.menu-item{
-    width:20%;
-    float:left;
-    margin: 10px;
-    text-align: center;
+.hover:hover{
+    color:  #e24b6c; 
+    text-decoration: none;
+}
+
+.menu{
+    width: 101.1%;
+}
+
+.logo-header {
+	background-image: url(../img/banner.jpg);
+	background-size: cover;
+	background-position: center bottom;
+	color: #fff;
+	font-family: 'Nunito', sans-serif;
+	padding-top: 150px;
+	padding-bottom: 100px;
+}
+
+.logo-header h1 {
+	font-size: 3rem;
+	font-weight: 300;
+	margin: 0 auto 0.2em auto;
+}
+
+.logo-header p {
+	font-size: 1.15rem;
+	width: 80%;
+	margin: 0 auto 2em auto;
+}
+
+.logo-header .logo {
+	margin: 0 auto 1em auto;
+}
+
+.logo-header .btn {
+	padding: 10px 26px;
+	color: #FFF;
+	display: inline-block;
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	text-decoration: none;
+	-moz-border-radius: 2px;
+	-webkit-border-radius: 2px;
+}
+
+.jumbotron{
+    background: none;
+}
+
+.linea{
+    background: #e24b6c;
+    padding: 5px;
+}
+
+.avatar {
+  vertical-align: middle;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+}
+
+.lista-sin-estilo{
+    list-style: none;
+}
+
+footer{
+    background: #000;
+    color: #fff;
+}
+
+footer a{
+    color: #fff;
+}
+
+footer a:hover{
+    color: #e24b6c;
+    text-decoration: none;
+}
+
+.redes{
+    font-size: 2em;
+}
+
+@media (min-width: 992px) {
+	.logo-header {
+		height: 100vh;
+		padding-top: 0;
+		padding-bottom: 0;
+	}
+	.logo-header h1 {
+		font-size: 4rem;
+	}
+	.logo-header p {
+		width: 60%;
+	}
+}
+
+@media (max-width: 480px) {
+	.logo-header h1 {
+		font-size: 2.4rem;
+	}
 }
